@@ -57,6 +57,7 @@ PEOPE WHO MADE LANGUAGE FILES
 - AutoHotkey             Naveen Garg
 - AutoIT                 mastrboy
 - AviSynth               Ryan Jones
+- Awk                    George Pollard
 - Bash                   Andreas Gohr
 - Basic4GL               Matthew Webb
 - BibTeX                 Quinn Taylor
