@@ -15,6 +15,7 @@ at sourceforge (http://sourceforge.net/tracker/?group_id=114997&atid=670231)
 Version 1.0.8.5
   -  Added language files
      * AutoHotkey (Naveen Garg)
+     * Awk (George Pollard)
      * PureBasic (Gustavo Julio Fiorenza)
   -  Improvements to language files (BenBE)
      * Fixed case-insensitively duplicate keywords (BenBE)
